AH-2004-04-15-0: Bugfix:    Fix problem with counter used to track number of JAPI 
                            threads that rely upon JAPI background thread service.
                 Review:    HP

JG-2004-04-15-0: Enhancem.: Allow the admin to choose the spooling method 
                            (berkeleydb or classic) at installation time, if SGE
                            was build with dynamic spooling 
                            (aimk -spool-dynamic).
                 Changed:   install scripts, testsuite
                 Review:    MD

CR-2004-04-15-0: Bugfix:    - output on qmaster clients when qmaster is 
                              not reachable
                            - qconf -ke <host> triggers "set_last_heard_from()
                              not suppored by commlib" logging ( Issue 833 )
                            - fixed qmaster exceeds max file descriptor limit
                              problem ( Issue 687 )
                            - fixed problem with reregistering of execd's at
                              qmaster daemon
                            - put information about max. used file descriptors
                              into qmaster message file at startup of qmaster
                            - delivering jobs will now fail if max. unheard 
                              value is reached, not when 2 load reports wasn't
                              received
                            - added new communication lists: endpoint_list
                            - better performance at automatic id dispatching
                            - added some thread trigger calls for a faster
                              connection establishment/disestablishment
                            - added 2 parameter to connect message:
                                 o port number where client is reachable and
                                 o autoclose mode of client (when service 